somewhat working map toggle, will work more later

--- a/styles/main.css
+++ b/styles/main.css
@@ -44,6 +44,13 @@ body {
     align-items: center;
 }
 
+#toggleMap{
+    position: relative;
+    top: 0vmin;
+    right: 0vmin;
+}
+
+
 .clickable{
     cursor: pointer;
 }
